--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "intl-tel-input": "^17.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "spotify-web-api-node": "^5.0.2",
     "tesseract.js": "^2.1.5",
     "twilio": "^3.76.0",
     "web-vitals": "^2.1.4"
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server",
+    "dev": "run-p server start"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.0",
+    "npm-run-all": "^4.1.5",
+    "request": "^2.88.2"
   }
 }
